--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <!--3Wschool-->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+  <!--Javascript-->
+  <script src="/JS/script.js"></script>
+  <script src="/JS/script-mobile.js"></script>
+
 
 </head>
 <body>
@@ -186,7 +190,6 @@
   </div>
   </footer>
 
-    <script src="/JS/script.js"></script>
-    <script src="/JS/script-mobile.js"></script>
+    
 </body>
 </html>
