Actualizando el menu

--- a/menu.html
+++ b/menu.html
@@ -72,7 +72,7 @@
             <div class="container_comida">
                 <div class="producto">
                     <a href="#hamburguesas"><img class=img_producto
-                            src="imagenes/food-photographer-E94j3rMcxlw-unsplash.jpg" alt="Hamburguesas"></a>
+                            src="./imagenes/food-photographer-E94j3rMcxlw-unsplash.jpg" alt="Hamburguesas"></a>
                     <a href="#hamburguesas" class="titulo">Hamburguesas</a>
                 </div>
                 <div class="producto">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="producto">
                     <a href="#sandwicheria"><img class=img_producto
-                            src="imagenes/yaw-ansu-kyeremeh-wDpGUhsbkqM-unsplash.jpg" alt="Sandwichería"></a>
+                            src="./imagenes/yaw-ansu-kyeremeh-wDpGUhsbkqM-unsplash.jpg" alt="Sandwichería"></a>
                     <a href="#sandwicheria" class="titulo">Sandwichería</a>
                 </div>
                 <div class="producto">
@@ -89,7 +89,7 @@
                     <a href="#lomos" class="titulo">Lomos</a>
                 </div>
                 <div class="producto">
-                    <a href="#vegetariano"><img class=img_producto src="imagenes/vegan.png" alt="Vegiie and Vegan"></a>
+                    <a href="#vegetariano"><img class=img_producto src="./imagenes/vegan.png" alt="Vegiie and Vegan"></a>
                     <a href="#vegetariano" class="titulo">Veggie & Vegan</a>
                 </div>
                 <div class="producto">
@@ -102,19 +102,19 @@
             </div>
             <div class="container_cafeteria">
                 <div class="producto">
-                    <a href="#cafeteria"> <img class=img_producto src="imagenes/coffee.jpg" alt="Cafetería"></a>
+                    <a href="#cafeteria"> <img class=img_producto src="./imagenes/coffee.jpg" alt="Cafetería"></a>
                     <a href="#cafeteria" class="titulo">Cafetería</a>
                 </div>
                 <div class="producto">
-                    <a href="#jugos"><img class=img_producto src="imagenes/jugo.jpg" alt="jugos"></a>
+                    <a href="#jugos"><img class=img_producto src="./imagenes/jugo.jpg" alt="jugos"></a>
                     <a href="#jugos" class="titulo">Jugos y Licuados</a>
                 </div>
                 <div class="producto">
-                    <a href="#meriendas"><img class=img_producto src="imagenes/merienda.png" alt="Meriendas"></a>
+                    <a href="#meriendas"><img class=img_producto src="./imagenes/merienda.png" alt="Meriendas"></a>
                     <a href="#meriendas" class="titulo">Meriendas</a>
                 </div>
                 <div class="producto">
-                    <a href="#postres"><img class=img_producto src="imagenes/postre.png" alt="Postres"></a>
+                    <a href="#postres"><img class=img_producto src="./imagenes/postre.png" alt="Postres"></a>
                     <a href="#postres" class="titulo">Postres</a>
                 </div>
             </div>
@@ -127,15 +127,15 @@
                     <a href="#gaseosas" class="titulo">Gaseosas, Aguas y Limonadas</a>
                 </div>
                 <div class="producto">
-                    <a href="#vinos"><img class=img_producto src="imagenes/vino.png" alt="Vino"></a>
+                    <a href="#vinos"><img class=img_producto src="./imagenes/vino.png" alt="Vino"></a>
                     <a href="#vinos" class="titulo">Cervezas, Vinos y Espumantes</a>
                 </div>
                 <div class="producto">
-                    <a href="#cocteles"><img class=img_producto src="imagenes/coctail.png" alt="Cocteles Clásicos"></a>
+                    <a href="#cocteles"><img class=img_producto src="./imagenes/coctail.png" alt="Cocteles Clásicos"></a>
                     <a href="#cocteles" class="titulo">Cocteles clásicos</a>
                 </div>
                 <div class="producto">
-                    <a href="#autor"><img class=img_producto src="imagenes/brooke-lark-HjWzkqW1dgI-unsplash.jpg"
+                    <a href="#autor"><img class=img_producto src="./imagenes/brooke-lark-HjWzkqW1dgI-unsplash.jpg"
                             alt="Cocteles de autor"></a>
                     <a href="#autor" class="titulo">Cocteles de Autor</a>
                 </div>
