--- a/contacto.html
+++ b/contacto.html
@@ -56,8 +56,7 @@
               </ul>
             </div>
         </div>
-  </header>
-
+    </header>
     <main>
         <div id="contacto">
             <div class="contenedor">
@@ -108,6 +107,7 @@
       <a href="https://www.freepik.es/foto-gratis/amigos-felices-comiendo-tapas_1300716.htm#page=4&query=bar&position=21&from_view=search&track=sph">Imagenes by Freepik</a>
     </div>
     </footer>
+    <script src="./JS/script-contacto.js"></script>
 </body>
 
 </html>
