--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
       
       <div class="Nosotros-desarrollo">
-        <img src="../imagenes/relax.jpg" width="30%" class="Nosotros-img" alt="">
+        <img src="./imagenes/relax.jpg" width="30%" class="Nosotros-img" alt="">
         <p class="Nosotros-p">
           ¡Bienvenidos a ByteBar, el lugar donde los sabores se fusionan con la pasión por la tecnología en el corazón de Córdoba Capital! Nuestra historia se remonta a 1995, cuando cuatro hermanos, Matias y Fiamma, Alejandro y Agustin, decidieron dar vida a su visión de crear un espacio único que combinara la pasión por la buena comida con la innovación tecnológica.
 
