--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
        <div class="social-iconos">
           <a href="https://www.linkedin.com/" class="social-icon"></a>
-          <a href="https://github.com/Bouer" class="social-icon"></a>
+          <a href="https://github.com/Bouer/ByteBar.github.io" class="social-icon"></a>
           <a href="https://web.whatsapp.com/" class="social-icon"></a>
        </div>
        <div class="footer-conteiner-datos"></div>
